# chello-be/src/routes/workspace.route.ts
@@ -3,22 +3,20 @@ let router = express.Router();
 import * as workspaceController from "../controllers/workspace.controller";
 import * as cardController from "../controllers/card.controller";
 
-router.get("/", workspaceController.index);
-
-router.post("/createWorkspace", workspaceController.createWorkspace);
-
-router.get("/getWorkspace", workspaceController.getWorkspace);
-
-router.put("/updateWorkspace/:wsId", workspaceController.updateWorkspace);
-
-router.delete("/deleteWorkspace/:wsId", workspaceController.deleteWorkspace);
-
 router.get("/:workspace/cards", cardController.getCards);
 
 router.post("/:workspace/createCard", cardController.createCard);
 
+router.patch("/:id", workspaceController.patchWorkspace);
 
+router.delete("/:id", workspaceController.deleteWorkspace);
 
+router.put("/:id", workspaceController.updateWorkspace);
 
+router.post("/", workspaceController.createWorkspace);
+
+router.get("/:id", workspaceController.getWorkspaceById);
+
+router.get("/", workspaceController.getWorkspace);
 
 export { router as workspaceRouter };
